--- a/css/base.css
+++ b/css/base.css
@@ -460,7 +460,7 @@ header {
 }
 /*---------------try-splise-----------------*/
 .try-splise {
-    background-image: url('./img/foto_bg2.jpg');
+    background-image: url('/img/foto_bg2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
