--- a/css/base.css
+++ b/css/base.css
@@ -45,7 +45,7 @@ html,body{
     font-style: normal;
     font-weight: 400;
     color: #FFFFFF;
-    background: #1E1E1E;
+    background: #121214;
 }
 
 a {text-decoration: none;}
